# compliance-ai-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/schemas/: compliance.py  document.py  extraction.py
app/services/: Extraction_service.py  extraction_service.py  openai_provider.py
frontend/: app.py
tests/: test_compliance_schema.py  test_document_schema.py  test_extraction_service.py
