[project]
name = "enterprise-agent-copilot"
version = "0.1.0"
description = "Enterprise Agent Copilot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.133.0",
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
log_cli = true
log_cli_level = "INFO"